<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.marktony.zhuanlan.ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/app_name"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:text="@string/version"
                        android:gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="vertical"
                        android:id="@+id/LL_rate">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/rate"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/rate_description"
                            android:gravity="top"
                            android:textSize="@dimen/little_text_size"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/author"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/author_name"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/author_description"
                            android:gravity="top"
                            android:textSize="@dimen/little_text_size"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:id="@+id/tv_github"
                        android:text="@string/follow_on_github"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:id="@+id/tv_zhihu"
                        android:text="@string/follow_on_zhihu"
                        android:gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:id="@+id/LL_icon_author"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/icon_author"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/icon_author_description"
                            android:gravity="top"
                            android:textSize="@dimen/little_text_size"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/support"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="vertical"
                        android:id="@+id/LL_bugs">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/feedback_advice"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/feedback_advice_description"
                            android:gravity="top"
                            android:textSize="@dimen/little_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="vertical"
                        android:id="@+id/LL_support">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/coffee"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/coffee_description"
                            android:gravity="top"
                            android:textSize="@dimen/little_text_size"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
